[package]
name = "turbo-maker"
version = "0.1.2"
edition = "2021"
description = "Super-fast multi-threaded document generator for MongoDB, operating through CLI."
keywords = [
    "data-generator",
    "mongodb-generator",
    "CLI",
    "turbo",
    "big-data"
]
license = "MIT"
repository = "https://github.com/AndrewShedov/turbo-maker"
homepage = "https://shedov.top"

[dependencies]
mongodb = "2.8.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.30.13"
rand = "0.8"
indicatif = "0.18"