[package]
name = "turbo-maker"
version = "0.1.26"
edition = "2021"
description = "Superfast, multithreaded document generator for MongoDB, operating through CLI. Generates millions of documents at maximum speed, utilizing all CPU threads."
keywords = [
    "data-generator",
    "mongodb-generator",
    "CLI",
    "turbo",
    "big-data"
]
license = "MIT"
repository = "https://github.com/AndrewShedov/turbo-maker"
homepage = "https://shedov.top"

[dependencies]
mongodb = "2.8.2"
toml = "0.8.23"
sysinfo = "0.30.13"
rand = "0.8.5"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
